bootstrap/gitops/common/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  ports:
  - name: api
    port: 80
    targetPort: api
  - name: console
    port: 9090
    targetPort: 9090
  selector:
    app: minio
  sessionAffinity: None
  type: ClusterIP
